<resources>
    <string name="app_name">Tingle</string>

    <!-- Strings for network use preference group -->
    <string name="action_settings">Settings</string>
    <string name="pref_network_header">Tingle Network Preferences</string>

    <string name="pref_network">Network</string>

    <!-- Strings for barcode data download preference -->
    <string name="pref_download_label">Download Barcode Data</string>
    <string name="pref_download_summary">
        Network connectivity required to download barcode data.
    </string>
    <string name="pref_download_key">download_barcode</string>

    <!-- Strings for barcode data download option labels -->
    <string name="pref_download_label_wifi_only">Only when on Wi-Fi</string>
    <string name="pref_download_label_any_network">On any network</string>

    <!-- Strings for barcode data download option values -->
    <string name="pref_download_wifi_only">wifi</string>
    <string name="pref_download_any_network">any</string>

    <string name="menu_action_take_photo">Photo</string>
    <string name="menu_action_scan">Scan</string>
    <string name="menu_action_list">List</string>
    <string name="menu_action_search">Search</string>

    <!-- Tingle Fragment strings -->
    <string name="recently_added">Recently added:</string>
    <string name="list_button">List of all things</string>
    <string name="add_button">Add new thing</string>
    <string name="what_thing">What thing?</string>
    <string name="where">Where?</string>
    <string name="scan_button">Scan Thing</string>
    <string name="barcode">Barcode</string>

    <!-- Match Selector Fragment stings -->
    <string name="match_selector_title">Multiple matches found:</string>
    <string name="search_hint">Where is...</string>
</resources>
