<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/menu_item_photo"
          android:icon="@android:drawable/ic_menu_camera"
          android:title="@string/menu_action_take_photo"
          app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/menu_item_scan"
          android:title="@string/menu_action_scan"
          app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/menu_item_list"
          android:title="@string/menu_action_list"
          app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/menu_item_search"
          android:title="@string/menu_action_search"
          app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/menu_item_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100" />
</menu>